# physical-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml  fly.toml  pyproject.toml  vision_proxy.py
app/: README.md  pubspec.yaml
docs/: architecture-diagrams.html  architecture-factorio.md  architecture.md  common-install-failures-v1.md  cross-os-testing-guide.md  cross-os-testing.md  first-10-minutes-playbook-v1.md  hardware-bom-v1.md  health-alerts-debug-playbook.md  migration-client-to-server-side.md  module-reference.md  notion-webhook-pantry-demo-v1.md  openclaw-vision-agent-architecture.md  quickstart-60-second-checklist-v1.md  quickstart-chatgpt.md  quickstart-claude-desktop.md  quickstart-codebuddy.md  quickstart-cursor.md  quickstart-docker-v1.md  quickstart-family-room.md  quickstart-gemini.md  quickstart-generic-mcp-client.md  quickstart-github-codespaces-v1.md  quickstart-headless-raspberry-pi-v1.md  quickstart-linux-systemd-v1.md  quickstart-macos-launchd-v1.md  quickstart-openclaw.md  quickstart-remote-lan-client-v1.md  quickstart-trae.md  quickstart-vscode.md  quickstart-windows-powershell-v1.md  quickstart-windsurf-trae-troubleshooting-v1.md  quickstart-windsurf.md  recommended-cameras-v1.md  recommended-cameras.md  replay-cursor-migration.md  setup-guide.md  show-hn-draft.md  v1-hardening-changelog.md  v1.0-release-criteria.md
gpt-action/: README.md  openapi-simple.yaml  openapi.yaml
relay/: install.sh  pair.py  relay_agent.py  requirements.txt  wifi_provision.py
scripts/: build-backend.sh  build-release.sh  dev.sh  e2e-local-test.sh  e2e-multi-camera.sh  rpi-setup.sh
tests/: test_ai_apps.py  test_alert_queue.py  test_analyzer_timeout.py  test_benchmark_multiclient.py  (+38 more)
(+120 files in other folders)
